Fix incorrect ballon tip alignment

--- a/static/scss/header/useroverview.scss
+++ b/static/scss/header/useroverview.scss
@@ -43,6 +43,8 @@
     background: $useroverview-color;
     margin-top: $arrow-size;
     
+    top: 100%;
+    
     &::before {
         content: "";
         position: absolute;
